syntax = "proto3";

package grpc.health.v1;

option php_metadata_namespace = "iBllex\\ServiceRegister\\Grpc\\Metadata";
option php_namespace = "iBllex\\ServiceRegister\\Grpc\\Health";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}